fix spacing menu/menu mobile

--- a/_sass/blog/_layout.scss
+++ b/_sass/blog/_layout.scss
@@ -43,9 +43,9 @@
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the last one
-    //&:not(:last-child) {
-    //  margin-right: 20px;
-    //}
+    &:not(:last-child) {
+     margin-right: 20px;
+    }
   }
 
   @include media-query($on-palm) {
@@ -99,6 +99,10 @@
 
       &:last-child {
         margin-bottom: 10px;
+      }
+      //Gaps between nav items, but not on the last one
+      &:not(:last-child) {
+       margin-right: 10px;
       }
       margin-right: 10px;
       margin-left: 10px;
